--- a/views/layout.erb
+++ b/views/layout.erb
@@ -1,9 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Title</title>
-
-    <link href='http://fonts.googleapis.com/css?family=Nixie+One|Parisienne|Gilda+Display|Oleo+Script+Swash+Caps|Simonetta|PT+Mono|Josefin+Sans|Londrina+Outline|Alegreya+Sans|Open+Sans+Condensed:300|Open+Sans|Varela+Round|Amatic+SC|Text+Me+One' rel='stylesheet' type='text/css'>
+    <title>SpaceCat</title>
      
      <link href="/css/normalize_styles.css" rel="stylesheet" type="text/css"/>
      <link href="/css/styles.css" rel="stylesheet" type="text/css"/>
