--- a/views/layout.erb
+++ b/views/layout.erb
@@ -5,13 +5,16 @@
      
      <link href="/css/normalize_styles.css" rel="stylesheet" type="text/css"/>
      <link href="/css/styles.css" rel="stylesheet" type="text/css"/>
-
+     <link href="css/bootstrap.min.css" rel="stylesheet"> 
+      <link href="css/bootstrap-theme.min.css" rel="stylesheet"> 
   </head> 
   
   <body>
-      
       <%= yield %>
-
+      <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
+      <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
+      <!-- Include all compiled plugins (below), or include individual files as needed -->
+      <script src="js/bootstrap.min.js"></script>
   </body>
 
 </html>
