--- a/sinatra_app/views/new.erb
+++ b/sinatra_app/views/new.erb
@@ -1,14 +1,17 @@
 <h1> Create a new SpaceCat </h1>
 
-<form action-"/spacecats" method="post">
-<label for="name"> Name:</label>
-<input type="text" name="rabbit[name]" value="<%= @spacecat.name %>"> </input><br>
-<label for="name"> Homeplanet:</label>
-<input type="text" name="rabbit[homeplanet" value="<%= @spacecat.homeplanet %>"> </input><br>
-<label for="name"> Tagline:</label>
-<input type="text" name="rabbit[tagline]" value="<%= @spacecat.tagline %>"> </input><br>
-<label for="name"> Superpower:</label>
-<input type="text" name="rabbit[superpower]" value="<%= @spacecat.superpower %>"> </input><br>
+<form action-"/spacecats" method="POST">
+  <label> Name:</label>
+  <input type="text" name="spacecat[name]" value="<%= @spacecat.name %>"> </input><br>
+  
+  <label> Homeplanet:</label>
+  <input type="text" name="spacecat[homeplanet]" value="<%= @spacecat.homeplanet %>"> </input><br>
+  
+  <label> Tagline:</label>
+  <input type="text" name="spacecat[tagline]" value="<%= @spacecat.tagline %>"> </input><br>
+  
+  <label> Superpower:</label>
+  <input type="text" name="spacecat[superpower]" value="<%= @spacecat.superpower %>"> </input><br>
 
-<input type="submit" value="Create"> or <a href='/rabbits'>cancel</a>
+  <input type="submit" value="Submit"> or <a href='/spacecats'>cancel</a>
 </form>
